--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 micronaut:
   application:
     name: christmas-tree-animation-sparkle
-    id: ${random.shortuuid}
+    instance:
+      id: ${random.shortuuid}
 consul:
   client:
     registration:
